--- a/DWMRI/src/drcnet/test.ipynb
+++ b/DWMRI/src/drcnet/test.ipynb
@@ -2,112 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "03ddf300",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append(\"/teamspace/studios/this_studio/TechJourney/DWMRI/src\")\n",
-    "from utils.data import DBrainDataLoader\n",
+    "sys.path.append(\"/teamspace/studios/this_studio/TechJourney/DWMRI/src\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2c1a606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import os\n",
     "\n",
-    "dbrain_data_loader = DBrainDataLoader(\n",
-    "    nii_path=\"/teamspace/s3_folders/dwmri-dataset/D_BRAIN_b2500_6_60_14_HCP_nless.nii\",\n",
-    "    bvecs_path=\"/teamspace/s3_folders/dwmri-dataset/D_BRAIN_b2500_6_60_HCP_b_matrix.txt\",\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "from drcnet.data import DataSet\n",
+    "from drcnet.fit import fit_model\n",
+    "from drcnet.model import DenoiserNet\n",
+    "from utils import setup_logging\n",
+    "\n",
+    "# from utils.checkpoint import load_checkpoint\n",
+    "from utils.data import DBrainDataLoader, StanfordDataLoader\n",
+    "\n",
+    "# from utils.metrics import (\n",
+    "#     compare_volumes,\n",
+    "#     compute_metrics,\n",
+    "#     save_metrics,\n",
+    "#     visualize_single_volume,\n",
+    "# )\n",
+    "from utils.utils import load_config\n",
+    "\n",
+    "train = True\n",
+    "dataset = \"dbrain\"\n",
+    "# Setup logging\n",
+    "log_file = setup_logging(log_level=logging.INFO)\n",
+    "logging.info(f\"Starting training with dataset: {dataset}\")\n",
+    "\n",
+    "# Get the directory where this script is located\n",
+    "script_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "config_path = os.path.join(script_dir, \"config.yaml\")\n",
+    "\n",
+    "logging.info(f\"Loading config from: {config_path}\")\n",
+    "\n",
+    "settings = load_config(config_path)\n",
+    "logging.info(\"Configuration loaded successfully\")\n",
+    "\n",
+    "if dataset == \"dbrain\":\n",
+    "    logging.info(\"Using DBrain dataset configuration\")\n",
+    "    settings = settings.dbrain\n",
+    "    data_loader = DBrainDataLoader(\n",
+    "        nii_path=settings.data.nii_path,\n",
+    "        bvecs_path=settings.data.bvecs_path,\n",
+    "        bvalue=settings.data.bvalue,\n",
+    "        noise_sigma=settings.data.noise_sigma,\n",
+    "    )\n",
+    "    logging.info(\n",
+    "        f\"DBrainDataLoader initialized with noise_sigma={settings.data.noise_sigma}\"\n",
+    "    )\n",
+    "elif dataset == \"stanford\":\n",
+    "    logging.info(\"Using Stanford dataset configuration\")\n",
+    "    settings = settings.stanford\n",
+    "    data_loader = StanfordDataLoader(settings.data)\n",
+    "    logging.info(\"StanfordDataLoader initialized\")\n",
+    "else:\n",
+    "    raise ValueError(f\"Invalid dataset: {dataset}\")\n",
+    "\n",
+    "logging.info(\"Loading data...\")\n",
+    "_, noisy_data = data_loader.load_data()\n",
+    "# omitting the b0s from the data\n",
+    "take_volumes = settings.data.num_b0s + settings.data.num_volumes\n",
+    "logging.info(f\"Taking volumes from {settings.data.num_b0s} to {take_volumes}\")\n",
+    "noisy_data = noisy_data[..., settings.data.num_b0s : take_volumes]\n",
+    "logging.info(f\"Noisy data shape: {noisy_data.shape}\")\n",
+    "logging.info(\n",
+    "    f\"Data type: {noisy_data.dtype}, Min: {noisy_data.min():.4f}, Max: {noisy_data.max():.4f}, Mean: {noisy_data.mean():.4f}\"\n",
     ")\n",
     "\n",
-    "_, noisy_data = dbrain_data_loader.load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "06da8053",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
+    "train_set = DataSet(\n",
+    "    noisy_data,\n",
+    "    take_volume_idx=settings.data.take_volume_idx,\n",
+    "    patch_size=(\n",
+    "        settings.data.num_volumes,\n",
+    "        settings.data.patch_size,\n",
+    "        settings.data.patch_size,\n",
+    "        settings.data.patch_size,\n",
+    "    ),\n",
+    "    step=settings.data.step,\n",
+    ")\n",
+    "train_loader = DataLoader(\n",
+    "    train_set, batch_size=settings.train.batch_size, shuffle=True\n",
+    ")\n",
+    "logging.info(\n",
+    "    f\"DataLoader created with batch_size={settings.train.batch_size}, num_batches={len(train_loader)}\"\n",
+    ")\n",
+    "logging.info(\"Initializing DenoiserNet model...\")\n",
+    "model = DenoiserNet(\n",
+    "    input_channels=settings.model.in_channel,\n",
+    "    output_channels=settings.model.out_channel,\n",
+    "    groups=settings.model.groups,\n",
+    "    dense_convs=settings.model.dense_convs,\n",
+    "    residual=settings.model.residual,\n",
+    "    base_filters=settings.model.base_filters,\n",
+    ")\n",
+    "logging.info(\n",
+    "    f\"Model initialized - in_channel: {settings.model.in_channel}, out_channel: {settings.model.out_channel}\"\n",
+    ")\n",
+    "logging.info(\n",
+    "    f\"Total model parameters: {sum(p.numel() for p in model.parameters())}\"\n",
+    ")\n",
     "\n",
-    "# transpose data from (X, Y, Z, Bvalues) to (Bvalues, X, Y, Z)\n",
-    "noisy_data = np.transpose(noisy_data[..., 6:16], (3, 0, 1, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6ce61695",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 128, 128, 97)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "noisy_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "aa10d147",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skimage.util import view_as_windows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f55e5cb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# taking sliding windows of size 32x32x32\n",
-    "new_data = view_as_windows(noisy_data, (10, 32, 32, 32), step=16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "4e307429",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c_patches, h_patches, w_patches, d_patches = new_data.shape[:4]\n",
-    "c, h, w, d = new_data.shape[4:]\n",
-    "image = np.reshape(\n",
-    "    new_data, (c_patches * h_patches * w_patches * d_patches, c, h, w, d)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "fbeb6980",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(245, 10, 32, 32, 32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image.shape"
+    "logging.info(\"Setting up optimizer and scheduler...\")\n",
+    "optimizer = torch.optim.Adam(\n",
+    "    model.parameters(), lr=settings.train.learning_rate\n",
+    ")\n",
+    "logging.info(f\"Optimizer: Adam(lr={settings.train.learning_rate})\")\n",
+    "\n",
+    "scheduler = None\n",
+    "if settings.train.use_scheduler:\n",
+    "    scheduler = torch.optim.lr_scheduler.StepLR(\n",
+    "        optimizer,\n",
+    "        step_size=settings.train.scheduler_step_size,\n",
+    "        gamma=settings.train.scheduler_gamma,\n",
+    "    )\n",
+    "    logging.info(\n",
+    "        f\"Scheduler: StepLR(step_size={settings.train.scheduler_step_size}, \"\n",
+    "        f\"gamma={settings.train.scheduler_gamma})\"\n",
+    "    )\n",
+    "\n",
+    "logging.info(f\"Training device: {settings.train.device}\")\n",
+    "logging.info(f\"Number of epochs: {settings.train.num_epochs}\")\n",
+    "logging.info(f\"Checkpoint directory: {settings.train.checkpoint_dir}\")\n",
+    "\n",
+    "# setting checkpoint dir taking into account run/model parameters\n",
+    "checkpoint_dir = os.path.join(\n",
+    "    settings.train.checkpoint_dir,\n",
+    "    f\"bvalue_{settings.data.bvalue}\",\n",
+    "    f\"num_volumes_{settings.data.num_volumes}\",\n",
+    "    f\"noise_sigma_{settings.data.noise_sigma}\",\n",
+    "    f\"learning_rate_{settings.train.learning_rate}\",\n",
+    ")\n",
+    "os.makedirs(checkpoint_dir, exist_ok=True)\n",
+    "\n",
+    "# Training\n",
+    "if train:\n",
+    "    fit_model(\n",
+    "        model=model,\n",
+    "        optimizer=optimizer,\n",
+    "        scheduler=scheduler,\n",
+    "        train_loader=train_loader,\n",
+    "        num_epochs=settings.train.num_epochs,\n",
+    "        device=settings.train.device,\n",
+    "        checkpoint_dir=checkpoint_dir,\n",
+    "    )\n",
+    "\n",
+    "    logging.info(\"Training setup completed successfully\")\n",
+    "    logging.info(f\"Training completed. Log file: {log_file}\")"
    ]
   }
  ],
