drcnet reconstruction tests

--- a/DWMRI/src/drcnet/test.ipynb
+++ b/DWMRI/src/drcnet/test.ipynb
@@ -9,15 +9,107 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append(\"/teamspace/studios/this_studio/TechJourney/DWMRI/src\")"
+    "sys.path.append(\"/home/paco/TechJourney/TechJourney/DWMRI/src\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d2c1a606",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/paco/vqvae/env-torch/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-07-21 22:04:28,447 - root - INFO - Logging configured - level: INFO, file: logs/training_20250721_220428.log\n",
+      "2025-07-21 22:04:28,448 - root - INFO - Starting training with dataset: dbrain\n",
+      "2025-07-21 22:04:28,449 - root - INFO - Loading config from: /home/paco/TechJourney/TechJourney/DWMRI/src/drcnet/config.yaml\n",
+      "2025-07-21 22:04:28,449 - root - INFO - Loading configuration from: /home/paco/TechJourney/TechJourney/DWMRI/src/drcnet/config.yaml\n",
+      "2025-07-21 22:04:28,455 - root - INFO - Configuration file loaded successfully\n",
+      "2025-07-21 22:04:28,457 - root - INFO - Configuration converted to Munch object\n",
+      "2025-07-21 22:04:28,457 - root - INFO - Configuration loaded successfully\n",
+      "2025-07-21 22:04:28,458 - root - INFO - Using DBrain dataset configuration\n",
+      "2025-07-21 22:04:28,459 - root - INFO - DBrainDataLoader initialized - nii_path: /home/paco/d_brain/D_BRAIN_b2500_6_60_14_HCP_nless.nii, bvecs_path: /home/paco/d_brain/D_BRAIN_b2500_6_60_HCP_b_matrix.txt, bvalue: 2500, noise_sigma: 0.01\n",
+      "2025-07-21 22:04:28,459 - root - INFO - DBrainDataLoader initialized with noise_sigma=0.01\n",
+      "2025-07-21 22:04:28,460 - root - INFO - Loading data...\n",
+      "2025-07-21 22:04:28,461 - root - INFO - Loading data from /home/paco/d_brain/D_BRAIN_b2500_6_60_14_HCP_nless.nii\n",
+      "pixdim[0] (qfac) should be 1 (default) or -1; setting qfac to 1\n",
+      "2025-07-21 22:04:28,463 - nibabel.global - INFO - pixdim[0] (qfac) should be 1 (default) or -1; setting qfac to 1\n",
+      "2025-07-21 22:04:28,465 - root - INFO - Raw data loaded - shape: (128, 128, 97, 66), dtype: float64\n",
+      "2025-07-21 22:04:28,746 - root - INFO - Raw data stats - min: 0.0000, max: 7462.0000, mean: 159.3769\n",
+      "2025-07-21 22:04:28,747 - root - INFO - Normalizing spatial dimensions...\n",
+      "2025-07-21 22:04:28,748 - root - INFO - Normalizing spatial dimensions for data of shape (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:29,562 - root - INFO - Spatial normalization completed - output shape: (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:29,671 - root - INFO - Normalized data stats - min: 0.0000, max: 1.0000, mean: 0.1140\n",
+      "2025-07-21 22:04:29,672 - root - INFO - Adding Rician noise with sigma=0.01...\n",
+      "2025-07-21 22:04:29,672 - root - INFO - Adding Rician noise with sigma=0.01 to data of shape (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:40,619 - root - INFO - Rician noise added - noisy data shape: (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:40,729 - root - INFO - Noisy data stats - min: 0.0000, max: 1.0321, mean: 0.1215\n",
+      "2025-07-21 22:04:40,730 - root - INFO - Normalizing noisy data spatial dimensions...\n",
+      "2025-07-21 22:04:40,731 - root - INFO - Normalizing spatial dimensions for data of shape (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:40,973 - root - INFO - Spatial normalization completed - output shape: (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:41,083 - root - INFO - Final noisy data stats - min: 0.0000, max: 1.0000, mean: 0.1209\n",
+      "2025-07-21 22:04:41,084 - root - INFO - Data shape: (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:41,084 - root - INFO - Noisy data shape: (128, 128, 97, 66)\n",
+      "2025-07-21 22:04:41,120 - root - INFO - Taking volumes from 6 to 16\n",
+      "2025-07-21 22:04:41,121 - root - INFO - Noisy data shape: (128, 128, 97, 10)\n",
+      "2025-07-21 22:04:41,139 - root - INFO - Data type: float32, Min: 0.0000, Max: 1.0000, Mean: 0.1210\n",
+      "2025-07-21 22:04:41,140 - root - INFO - Initializing DataSet: data.shape=(128, 128, 97, 10), take_volume_idx=0, patch_size=(10, 32, 32, 32), step=16\n",
+      "2025-07-21 22:04:41,141 - root - INFO - Creating sliding windows: patch_size=(10, 32, 32, 32), step=16\n",
+      "2025-07-21 22:04:43,806 - root - INFO - Sliding windows reshaped to: (245, 10, 32, 32, 32)\n",
+      "2025-07-21 22:04:43,807 - root - INFO - Created 245 windows of shape torch.Size([10, 32, 32, 32]).\n",
+      "2025-07-21 22:04:43,808 - root - INFO - DataLoader created with batch_size=8, num_batches=31\n",
+      "2025-07-21 22:04:43,809 - root - INFO - Initializing DenoiserNet model...\n",
+      "2025-07-21 22:04:43,810 - root - INFO - Initializing DenoiserNet: input_channels=9, output_channels=1, groups=1, dense_convs=2, residual=True, base_filters=32\n",
+      "2025-07-21 22:04:43,831 - root - INFO - Initializing GatedBlock: x_channels=32, h_channels=32, dense_convs=2, groups=1\n",
+      "2025-07-21 22:04:43,833 - root - INFO - Initializing DenoisingBlock: in_channels=64, inner_channels=32, out_channels=32, inner_convolutions=2, residual=False\n",
+      "2025-07-21 22:04:43,834 - root - INFO - Initializing FactorizedBlock: in_channels=96, out_channels=32, groups=1\n",
+      "2025-07-21 22:04:43,835 - root - INFO - Initializing FactorizedBlock: in_channels=128, out_channels=32, groups=1\n",
+      "2025-07-21 22:04:43,838 - root - INFO - Model initialized - in_channel: 9, out_channel: 1\n",
+      "2025-07-21 22:04:43,838 - root - INFO - Total model parameters: 109954\n",
+      "2025-07-21 22:04:43,839 - root - INFO - Setting up optimizer and scheduler...\n",
+      "2025-07-21 22:04:44,872 - root - INFO - Optimizer: Adam(lr=0.0001)\n",
+      "2025-07-21 22:04:44,873 - root - INFO - Training device: cpu\n",
+      "2025-07-21 22:04:44,874 - root - INFO - Number of epochs: 1\n",
+      "2025-07-21 22:04:44,875 - root - INFO - Checkpoint directory: drcnet/checkpoints/dbrain\n",
+      "2025-07-21 22:04:44,877 - root - INFO - Starting training - device: cpu, epochs: 1\n",
+      "2025-07-21 22:04:44,877 - root - INFO - Model device: cpu\n",
+      "2025-07-21 22:04:44,879 - root - INFO - Model moved to device: cpu\n",
+      "2025-07-21 22:04:44,879 - root - INFO - Using existing checkpoint directory: drcnet/checkpoints/dbrain/bvalue_2500/num_volumes_10/noise_sigma_0.01/learning_rate_0.0001\n",
+      "2025-07-21 22:04:44,880 - root - INFO - Attempting to load checkpoint from: drcnet/checkpoints/dbrain/bvalue_2500/num_volumes_10/noise_sigma_0.01/learning_rate_0.0001/latest_checkpoint.pth\n",
+      "2025-07-21 22:04:44,881 - root - INFO - No checkpoint found at drcnet/checkpoints/dbrain/bvalue_2500/num_volumes_10/noise_sigma_0.01/learning_rate_0.0001/latest_checkpoint.pth, starting training from scratch\n",
+      "2025-07-21 22:04:44,881 - root - INFO - Training starting from epoch: 0\n",
+      "2025-07-21 22:04:44,882 - root - INFO - Best loss so far: inf\n",
+      "2025-07-21 22:04:44,886 - root - INFO - Starting epoch 1/1\n",
+      "2025-07-21 22:04:44,887 - root - INFO - Current learning rate: 0.000100\n",
+      "\n",
+      "\u001b[A/home/paco/vqvae/env-torch/lib/python3.10/site-packages/torch/nn/modules/loss.py:128: UserWarning: Using a target size (torch.Size([8, 32, 32, 32])) that is different to the input size (torch.Size([8, 9, 32, 32, 32])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.l1_loss(input, target, reduction=self.reduction)\n",
+      "Epoch 1/1:   0%|          | 0/31 [00:00<?, ?it/s]\n",
+      "Training:   0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (9) must match the size of tensor b (8) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 136\u001b[0m\n\u001b[1;32m    134\u001b[0m \u001b[38;5;66;03m# Training\u001b[39;00m\n\u001b[1;32m    135\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m train:\n\u001b[0;32m--> 136\u001b[0m     \u001b[43mfit_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    137\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    138\u001b[0m \u001b[43m        \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    139\u001b[0m \u001b[43m        \u001b[49m\u001b[43mscheduler\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscheduler\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    140\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    141\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msettings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_epochs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    142\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msettings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    143\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcheckpoint_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcheckpoint_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    144\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    146\u001b[0m     logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining setup completed successfully\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    147\u001b[0m     logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining completed. Log file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlog_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/TechJourney/TechJourney/DWMRI/src/drcnet/fit.py:81\u001b[0m, in \u001b[0;36mfit_model\u001b[0;34m(model, optimizer, scheduler, train_loader, num_epochs, device, checkpoint_dir)\u001b[0m\n\u001b[1;32m     79\u001b[0m x_recon \u001b[38;5;241m=\u001b[39m model(x)\n\u001b[1;32m     80\u001b[0m \u001b[38;5;66;03m# loss\u001b[39;00m\n\u001b[0;32m---> 81\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mloss_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_recon\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;66;03m# zero grad\u001b[39;00m\n\u001b[1;32m     83\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
+      "File \u001b[0;32m~/vqvae/env-torch/lib/python3.10/site-packages/torch/nn/modules/module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/vqvae/env-torch/lib/python3.10/site-packages/torch/nn/modules/module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "File \u001b[0;32m~/vqvae/env-torch/lib/python3.10/site-packages/torch/nn/modules/loss.py:128\u001b[0m, in \u001b[0;36mL1Loss.forward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor, target: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[0;32m--> 128\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43ml1_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/vqvae/env-torch/lib/python3.10/site-packages/torch/nn/functional.py:3810\u001b[0m, in \u001b[0;36ml1_loss\u001b[0;34m(input, target, size_average, reduce, reduction, weight)\u001b[0m\n\u001b[1;32m   3807\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   3808\u001b[0m     reduction \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3810\u001b[0m expanded_input, expanded_target \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3812\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   3813\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m weight\u001b[38;5;241m.\u001b[39msize() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msize():\n",
+      "File \u001b[0;32m~/vqvae/env-torch/lib/python3.10/site-packages/torch/functional.py:76\u001b[0m, in \u001b[0;36mbroadcast_tensors\u001b[0;34m(*tensors)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function(tensors):\n\u001b[1;32m     75\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(broadcast_tensors, tensors, \u001b[38;5;241m*\u001b[39mtensors)\n\u001b[0;32m---> 76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_VF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (9) must match the size of tensor b (8) at non-singleton dimension 1"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import os\n",
@@ -48,7 +140,7 @@
     "logging.info(f\"Starting training with dataset: {dataset}\")\n",
     "\n",
     "# Get the directory where this script is located\n",
-    "script_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "script_dir = \"/home/paco/TechJourney/TechJourney/DWMRI/src/drcnet\"\n",
     "config_path = os.path.join(script_dir, \"config.yaml\")\n",
     "\n",
     "logging.info(f\"Loading config from: {config_path}\")\n",
@@ -167,13 +259,21 @@
     "    logging.info(\"Training setup completed successfully\")\n",
     "    logging.info(f\"Training completed. Log file: {log_file}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ee5804-7745-45d6-9320-40016e33914c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cloudspace",
+   "display_name": "env-torch",
    "language": "python",
-   "name": "python3"
+   "name": "env-torch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,6 +286,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.16"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
