--- a/DWMRI/src/runner.ipynb
+++ b/DWMRI/src/runner.ipynb
@@ -45,48 +45,53 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0d639354-0ee6-48f9-ba81-51e9240cc764",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-22 21:54:59,373 - root - INFO - Logging configured - level: INFO, file: logs/training_20250722_215459.log\n",
-      "2025-07-22 21:54:59,375 - root - INFO - Starting training with dataset: dbrain\n",
-      "2025-07-22 21:54:59,376 - root - INFO - Loading config from: /home/paco/TechJourney/TechJourney/DWMRI/src/drcnet/config.yaml\n",
-      "2025-07-22 21:54:59,376 - root - INFO - Loading configuration from: /home/paco/TechJourney/TechJourney/DWMRI/src/drcnet/config.yaml\n",
-      "2025-07-22 21:54:59,382 - root - INFO - Configuration file loaded successfully\n",
-      "2025-07-22 21:54:59,383 - root - INFO - Configuration converted to Munch object\n",
-      "2025-07-22 21:54:59,384 - root - INFO - Configuration loaded successfully\n",
-      "2025-07-22 21:54:59,385 - root - INFO - Using DBrain dataset configuration\n",
-      "2025-07-22 21:54:59,385 - root - INFO - DBrainDataLoader initialized - nii_path: /home/paco/d_brain/D_BRAIN_b2500_6_60_14_HCP_nless.nii, bvecs_path: /home/paco/d_brain/D_BRAIN_b2500_6_60_HCP_b_matrix.txt, bvalue: 2500, noise_sigma: 0.01\n",
-      "2025-07-22 21:54:59,386 - root - INFO - DBrainDataLoader initialized with noise_sigma=0.01\n",
-      "2025-07-22 21:54:59,387 - root - INFO - Loading data...\n",
-      "2025-07-22 21:54:59,388 - root - INFO - Loading data from /home/paco/d_brain/D_BRAIN_b2500_6_60_14_HCP_nless.nii\n",
+      "2025-08-03 14:03:28,144 - root - INFO - Logging configured - level: INFO, file: logs/training_20250803_140328.log\n",
+      "2025-08-03 14:03:28,145 - root - INFO - Starting training with dataset: dbrain\n",
+      "2025-08-03 14:03:28,146 - root - INFO - Loading config from: /home/paco/TechJourney/TechJourney/DWMRI/src/drcnet/config.yaml\n",
+      "2025-08-03 14:03:28,147 - root - INFO - Loading configuration from: /home/paco/TechJourney/TechJourney/DWMRI/src/drcnet/config.yaml\n",
+      "2025-08-03 14:03:28,152 - root - INFO - Configuration file loaded successfully\n",
+      "2025-08-03 14:03:28,153 - root - INFO - Configuration converted to Munch object\n",
+      "2025-08-03 14:03:28,154 - root - INFO - Configuration loaded successfully\n",
+      "2025-08-03 14:03:28,155 - root - INFO - Using DBrain dataset configuration\n",
+      "2025-08-03 14:03:28,155 - root - INFO - DBrainDataLoader initialized - nii_path: /home/paco/d_brain/D_BRAIN_b2500_6_60_14_HCP_nless.nii, bvecs_path: /home/paco/d_brain/D_BRAIN_b2500_6_60_HCP_b_matrix.txt, bvalue: 2500, noise_sigma: 0.01\n",
+      "2025-08-03 14:03:28,156 - root - INFO - DBrainDataLoader initialized with noise_sigma=0.01\n",
+      "2025-08-03 14:03:28,156 - root - INFO - Loading data...\n",
+      "2025-08-03 14:03:28,156 - root - INFO - Loading data from /home/paco/d_brain/D_BRAIN_b2500_6_60_14_HCP_nless.nii\n",
       "pixdim[0] (qfac) should be 1 (default) or -1; setting qfac to 1\n",
-      "2025-07-22 21:54:59,392 - nibabel.global - INFO - pixdim[0] (qfac) should be 1 (default) or -1; setting qfac to 1\n",
-      "2025-07-22 21:54:59,394 - root - INFO - Raw data loaded - shape: (128, 128, 97, 66), dtype: float64\n",
-      "2025-07-22 21:54:59,645 - root - INFO - Raw data stats - min: 0.0000, max: 7462.0000, mean: 159.3769\n",
-      "2025-07-22 21:54:59,646 - root - INFO - Normalizing spatial dimensions...\n",
-      "2025-07-22 21:54:59,646 - root - INFO - Normalizing spatial dimensions for data of shape (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:00,441 - root - INFO - Spatial normalization completed - output shape: (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:00,541 - root - INFO - Normalized data stats - min: 0.0000, max: 1.0000, mean: 0.1140\n",
-      "2025-07-22 21:55:00,543 - root - INFO - Adding Rician noise with sigma=0.01...\n",
-      "2025-07-22 21:55:00,543 - root - INFO - Adding Rician noise with sigma=0.01 to data of shape (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:11,695 - root - INFO - Rician noise added - noisy data shape: (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:11,797 - root - INFO - Noisy data stats - min: 0.0000, max: 1.0321, mean: 0.1215\n",
-      "2025-07-22 21:55:11,797 - root - INFO - Normalizing noisy data spatial dimensions...\n",
-      "2025-07-22 21:55:11,798 - root - INFO - Normalizing spatial dimensions for data of shape (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:12,036 - root - INFO - Spatial normalization completed - output shape: (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:12,137 - root - INFO - Final noisy data stats - min: 0.0000, max: 1.0000, mean: 0.1209\n",
-      "2025-07-22 21:55:12,138 - root - INFO - Data shape: (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:12,138 - root - INFO - Noisy data shape: (128, 128, 97, 66)\n",
-      "2025-07-22 21:55:12,176 - root - INFO - Taking volumes from 6 to 16\n",
-      "2025-07-22 21:55:12,177 - root - INFO - Noisy data shape: (128, 128, 96, 10)\n",
-      "2025-07-22 21:55:12,193 - root - INFO - Data type: float32, Min: 0.0000, Max: 1.0000, Mean: 0.1221\n",
-      "2025-07-22 21:55:12,194 - root - INFO - Initializing DataSet: data.shape=(128, 128, 96, 10), take_volume_idx=0, patch_size=(10, 32, 32, 32), step=4\n",
-      "2025-07-22 21:55:12,195 - root - INFO - Data transposed to: (10, 128, 128, 96)\n",
-      "2025-07-22 21:55:12,195 - root - INFO - Creating sliding windows: patch_size=(10, 32, 32, 32), step=4\n"
+      "2025-08-03 14:03:28,159 - nibabel.global - INFO - pixdim[0] (qfac) should be 1 (default) or -1; setting qfac to 1\n",
+      "2025-08-03 14:03:28,160 - root - INFO - Raw data loaded - shape: (128, 128, 97, 66), dtype: float64\n",
+      "2025-08-03 14:03:28,439 - root - INFO - Raw data stats - min: 0.0000, max: 7462.0000, mean: 159.3769\n",
+      "2025-08-03 14:03:28,440 - root - INFO - Normalizing spatial dimensions...\n",
+      "2025-08-03 14:03:28,440 - root - INFO - Normalizing spatial dimensions for data of shape (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:29,284 - root - INFO - Spatial normalization completed - output shape: (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:29,393 - root - INFO - Normalized data stats - min: 0.0000, max: 1.0000, mean: 0.1140\n",
+      "2025-08-03 14:03:29,395 - root - INFO - Adding Rician noise with sigma=0.01...\n",
+      "2025-08-03 14:03:29,395 - root - INFO - Adding Rician noise with sigma=0.01 to data of shape (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:40,538 - root - INFO - Rician noise added - noisy data shape: (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:40,648 - root - INFO - Noisy data stats - min: 0.0000, max: 1.0321, mean: 0.1215\n",
+      "2025-08-03 14:03:40,649 - root - INFO - Normalizing noisy data spatial dimensions...\n",
+      "2025-08-03 14:03:40,650 - root - INFO - Normalizing spatial dimensions for data of shape (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:40,896 - root - INFO - Spatial normalization completed - output shape: (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:41,006 - root - INFO - Final noisy data stats - min: 0.0000, max: 1.0000, mean: 0.1209\n",
+      "2025-08-03 14:03:41,007 - root - INFO - Data shape: (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:41,008 - root - INFO - Noisy data shape: (128, 128, 97, 66)\n",
+      "2025-08-03 14:03:41,047 - root - INFO - Taking volumes from 6 to 16\n",
+      "2025-08-03 14:03:41,048 - root - INFO - Noisy data shape: (128, 128, 96, 10)\n",
+      "2025-08-03 14:03:41,065 - root - INFO - Data type: float32, Min: 0.0000, Max: 1.0000, Mean: 0.1221\n",
+      "2025-08-03 14:03:41,066 - root - INFO - Initializing DataSet: data.shape=(128, 128, 96, 10), patch_size=(10, 32, 32, 32), step=4\n",
+      "2025-08-03 14:03:41,066 - root - INFO - Data transposed to: (10, 128, 128, 96)\n",
+      "2025-08-03 14:03:41,067 - root - INFO - Creating sliding windows: patch_size=(10, 32, 32, 32), step=4\n"
      ]
     }
    ],
